k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guard
  namespace: guard
spec:
  selector:
    app: guard
  ports:
    - port: 80
      targetPort: 8090
